--- a/index.html
+++ b/index.html
@@ -266,22 +266,22 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/main/Screen Shot 2023-05-15 at 1.21.45 AM.png" class="img-fluid" alt="moving sensor for orientation">
             <div class="portfolio-info">
               <h4>Week 6</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <p>Input devices</p>
+              <a href="assets/img/portfolio/input devices/ezgif.com-video-to-gif (7).gif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Input devices"><i class="bx bx-plus"></i></a>
+              <a href="input-devices.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/main/output.jpg" class="img-fluid" alt="gas sensor and lcd">
             <div class="portfolio-info">
               <h4>Week 7</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <p>Output devices</p>
+              <a href="assets/img/portfolio/main/output.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Output devices"><i class="bx bx-plus"></i></a>
+              <a href="output-devices.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -306,16 +306,16 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/main/robot.png" class="img-fluid" alt="robot">
             <div class="portfolio-info">
               <h4>Week 10</h4>
               <p>Machine Building and End Effectors</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 10"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="assets/img/portfolio/main/robot.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Robot"><i class="bx bx-plus"></i></a>
+              <a href="machine-building.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Week 11</h4>
@@ -323,17 +323,7 @@
               <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 11"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Final Project</h4>
-              <p>Installation components</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Final Project"><i class="bx bx-plus"></i></a>
-              <a href="final-project.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/sticker.png" class="img-fluid" alt="person wearing LED face sticker">
@@ -344,6 +334,18 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/final-project/hero/printer.jpg" class="img-fluid" alt="receipt printer and quiz">
+            <div class="portfolio-info">
+              <h4>Final Project</h4>
+              <p>Installation components</p>
+              <a href="assets/img/portfolio/final-project/hero/printer.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Final Project"><i class="bx bx-plus"></i></a>
+              <a href="final-project.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+
 
         </div>
 
