--- a/machine-building.html
+++ b/machine-building.html
@@ -59,7 +59,7 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-     <p> This was a group collaboration. You can find our group page <a href="https://hueanhcao.github.io/PS70/wifi.html">here</a></p>
+     <p> This was a group collaboration. You can find our group page <a href="https://geometrikz.github.io/PS70/blog/week_10/">here</a></p>
     </div>
   </div>
      
