--- a/final-project.html
+++ b/final-project.html
@@ -136,7 +136,7 @@
             <br>
                <h1>Process</h1>
                <p>
-                I built upon the molding and casting week's project so I will not repeat that process here. Reference back to <a href="https://alexandraweiner.github.io/PS70/milling-molding-casting.html">week 8</a> for the organ component of the project with some additonal learnings!
+                I built upon the molding and casting week's project so I added to that process page for that portion of the work. Reference back to <a href="https://alexandraweiner.github.io/PS70/milling-molding-casting.html">week 8</a> for the organ component of the project with some additonal learnings!
                </p>
                <h3>Materials</h3>
                <p>
